Fixed code block z-index and invisible border due to negative padding

--- a/src/frontend/src/renderer/src/components/ProblemDescription.css
+++ b/src/frontend/src/renderer/src/components/ProblemDescription.css
@@ -52,6 +52,7 @@
         display: inline-block;
         margin: 0;
         padding: 0;
+        z-index: 0;
     }
 
     code:before {
@@ -65,6 +66,11 @@
         bottom: 0px;
         border: 1px solid #333340;
         background: #10101a;
+    }
+
+    pre {
+        padding-left: 2px;
+        overflow: auto;
     }
 
     pre.wrap {
